# epoch

./: .gitignore  README.md  pyproject.toml  queries.json
client/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
client/src/: middleware.ts
client/src/app/: layout.tsx  not-found.tsx  page.tsx
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/app/dashboard/discover/: page.tsx
client/src/app/dashboard/stock-dashboard/: page.tsx
client/src/app/sign-in/: page.tsx
client/src/app/sign-up/: page.tsx
client/src/components/: ComingSoon.tsx  Providers.tsx  Spinner.tsx
client/src/components/charts/: Recharts.tsx  TradingChart.tsx
client/src/components/chat-bot/: ChatBot.tsx  ConversationStarter.tsx  DisplayStream.tsx  MessageUI.tsx  OldChatBot.tsx  UserForm.tsx
client/src/components/dashboard/: Menu.tsx  SideBar.tsx  TopBar.tsx
client/src/components/home/: HeroSection.tsx  Navbar.tsx
client/src/components/news/: Card.tsx  CardSkeleton.tsx  ImgWrapper.tsx
client/styles/: globals.css
fastapi-server/: README.md  config.py  main.py  pyproject.toml
fastapi-server/agents/: db_tool.py  prompts.py  router.py  tavily.py
fastapi-server/python/: util.py
fastapi-server/python/function_calls/: comparisons.py  earnings.py  news.py  technical_summary.py
